@@ -13,7 +13,7 @@ has 'irods_root' => ( isa => 'Str',
 
 sub _build_irods_root {
   my $self = shift;
-  return $self->function_list() =~ /gclp/ismx ? q(/gseq/) : q(/seq/);
+  return $self->gclp ? q(/gseq/) : q(/seq/);
 }
 
 sub submit_to_lsf {
@@ -26,7 +26,7 @@ sub submit_to_lsf {
 sub _generate_bsub_command {
   my ($self, $arg_refs) = @_;
 
-  my $irodsinstance = $self->function_list() =~ /gclp/ismx ? q(gclp) : q();
+  my $irodsinstance = $self->gclp ? q(gclp) : q();
   my $id_run = $self->id_run();
 
   my $required_job_completion = $arg_refs->{'required_job_completion'};
